- added shopping cart icons - navbar items alignment fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,9 @@ body {
     border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 
+.navbar{
+    border-bottom: 1px solid #dfdfdf;
+}
 
 /* navigation link style overide */
 .navbar-light .navbar-nav .nav-link.active {
